--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
                 <button class="btn btn-primary">Contact</button>
             </div>
         </nav>
+
+        <div class="hero flex items-center justify-between">
+            <div class="left flex-1 flex justify-center">
+                <img src="images/man.jpg">
+            </div>
+            <div class="right1 flex-1">
+                <h6>Afaque Ahmed</h6>
+                 <h1>I'm a Creative <span>Designer</span></h1>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div>
+                    <button class="btn btn-secondary">DOWNLOAD CV</button>
+                </div>
+                </div>
+        </div>
+
     </div>
-     </header>
+    </header>
 
 
 
