Work,Client section

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
                 <a href="#work">Work</a>
-                <a href="#">Blog</a>
+                <a href="#blog">Blog</a>
             </div>
             </div>
 
             <div class="right">
-                <button class="btn btn-primary">Contact</button>
+                <button class="btn btn-primary"> Contact</button>
             </div>
         </nav>
 
@@ -248,6 +248,138 @@
   
 
     <!-- ------------------------------ Work Section End ---------------------------------- -->
+
+    <!-- ------------------------------ blog Section Start -------------------------------- -->
+
+
+   <section id="blog" class="blog">
+     <div class="container">
+         <h1 class="section-heading"><span>Our</span> Blog</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+     </div>
+
+ 
+     <div class="card-wrapper">
+         <div class="card">
+             <div class="img-wrapper">
+                 <img src="./images/article-ph-1.png" alt="">
+             </div>
+             <div class="card-content">
+                 <a href="#">
+                     <h1>WEb is Master</h1>
+                 </a>
+                 <span>Jun, 25 2020</span>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <a href="#">Read More</a>
+                </div>
+         </div>
+
+         <div class="card">
+            <div class="img-wrapper">
+                <img src="./images/article-ph-2.png" alt="">
+            </div>
+            <div class="card-content">
+                <a href="#">
+                    <h1>React Lover</h1>
+                </a>
+                <span>April, 3 2020</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+               <a href="#">Read More</a>
+               </div>
+        </div>
+
+        <div class="card">
+            <div class="img-wrapper">
+                <img src="./images/article-ph-3.png" alt="">
+            </div>
+            <div class="card-content">
+                <a href="#">
+                    <h1>Javascript Master</h1>
+                </a>
+                <span>may, 15 2020</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+               <a href="#">Read More</a>
+               </div>
+        </div>
+     </div>
+   </section>
+
+
+    <!-- ------------------------------ Work Section End ---------------------------------- -->
+
+
+    <!-- ------------------------------ Contact Section Start ---------------------------------- -->
+
+
+    <section class="contact">
+   
+        <h1 class="section-heading">Contact <span>Us</span></h1>
+        <p>We provide high standar clean website for your business solutions</p>
+
+        <div class="card-wrapper">
+            <div class="card">
+                <img src="./images/mobile-1976104_1280.png" width="60px" alt="">
+                <h2>Call Us On</h2>
+                <h6>003-3972-397</h6>
+            </div>
+
+            <div class="card extra">
+                <img src="./images/letters-389108_640.png" width="60px" alt="">
+                <h2>Email Us On</h2>
+                <h6>ahmedafaque805@gmail.com</h6>
+            </div>
+
+            <div class="card">
+                <img src="./images/pin-1873372_640.png" width="40px" height="55px" alt="">
+                <h2>visit Office</h2>
+                <h6>99 S.t karachi Aladen Park 74900, Pakistan</h6>
+            </div>
+        </div>
+
+        <form action="">
+
+        <div class="input-wrap">
+            <input type="text" placeholder="Your Name *">
+            <input type="email" placeholder="Your Email *">
+        </div>
+
+        <div class="input-wrap-2">
+            <input type="text" placeholder="Your Subject...">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..."></textarea>
+        </div>
+
+        <div class="btn-wrapper">
+            <button class="btn btn-primary">Send Message</button>
+        </div>
+
+        </form>
+    </section>
+
+    <!-- ------------------------------ Contact Section End ---------------------------------- -->
+
+
+    <!-- ------------------------------ Footer Section Start ------------------------------ -->
+
+
+    <footer>
+        <img class="footer-logo" src="./images/logo.png" alt="">
+
+        <div class="footer-socials">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+
+        <div class="copyright">
+            Copyright 2020 &#169; Afaque Ahmed. All right Reserved.
+        </div>
+    </footer>
+
+
+    <!-- ------------------------------ Footer Section End -------------------------------- -->
+
 
 
 </body>
